Fixed the problem when clicking on button to change units the previous json was loaded, changed scrollbar style, updated README

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,9 +5,7 @@
   font-family:DejaVu Sans Mono, monospace;
 }
 :root {
-  --compass-color: #e0c281;
-  --compass-accent: #475651;
-  --compass-red: #600c12;
+  --accent: #6d7a76;
 }
 body {
   background-size: cover;
@@ -175,7 +173,7 @@ sup {
   justify-content: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  color: #6d7a76;
+  color: var(--accent);
 
 }
 .switch {
@@ -197,6 +195,17 @@ sup {
   margin-right: 20px;
   overflow-x: scroll;
 }
+.forecast::-webkit-scrollbar {
+    height: 10px;
+}
+.forecast::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: var(--accent);
+}
+.forecast::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: transparent;
+}
 .card {
   display: flex;
   flex-direction: column;
@@ -205,7 +214,7 @@ sup {
   text-align: center;
   border-radius: 3vh;
   background: rgba(255, 255, 255, 0.75);
-  color: #6d7a76;
+  color: var(--accent);
   font-size: 1em;
   height: 26vh;
 }
